[package]
name = "orders"
version = "0.0.1"
edition = "2024"

[dependencies]
rand = { version = "0.9.0", features = ["std_rng"] }
rand_chacha = "0.9.0"
serde = { version = "1.0.225", features = ["derive"] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[profile.test]
opt-level = 2
debug-assertions = true
